--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "## 開発環境",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
+    "build-dev": "webpack --mode development",
+    "watch-dev": "webpack --watch --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
