--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/freshbrashman/project-t#readme",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
+    "css-loader": "^1.0.1",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
