--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "## 開発環境",
   "main": "index.js",
   "scripts": {
-    "build-dev": "webpack --mode development",
-    "watch-dev": "webpack --watch --mode development",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,16 +21,24 @@
   "homepage": "https://github.com/freshbrashman/project-t#readme",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
+    "css-loader": "^1.0.1",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.116",
     "@types/react": "^16.4.10",
     "@types/react-dom": "^16.0.7",
+    "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-dnd": "^5.0.0",
-    "react-dom": "^16.4.2"
+    "react-dnd-html5-backend": "^5.0.1",
+    "react-dom": "^16.4.2",
+    "react-easy-state": "^5.1.0",
+    "styled-components": "^3.4.5"
   }
 }
