--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "@types/lodash": "^4.14.116",
     "@types/react": "^16.4.10",
     "@types/react-dom": "^16.0.7",
+    "@types/react-router": "^4.4.1",
+    "@types/react-router-dom": "^4.3.1",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-easy-state": "^5.1.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^3.4.5"
   }
 }
