--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^16.0.7",
     "@types/react-router": "^4.4.1",
     "@types/react-router-dom": "^4.3.1",
+    "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-dnd": "^5.0.0",
