--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.0.0
 asn1crypto==0.24.0
+astroid==2.1.0
 bottle==0.12.13
 cffi==1.11.5
 click==6.7
@@ -8,15 +9,22 @@ Flask==1.0.2
 Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
 idna==2.7
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 Mako==1.0.7
 MarkupSafe==1.0
+mccabe==0.6.1
 numpy==1.15.0
 pycparser==2.18
+PyJWT==1.7.1
+pylint==2.2.2
 PyMySQL==0.9.2
 python-dateutil==2.7.3
 python-editor==1.0.3
-six==1.11.0
+six==1.12.0
 SQLAlchemy==1.2.10
+typed-ast==1.1.0
 Werkzeug==0.14.1
+wrapt==1.10.11
