--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,14 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
-    "jsx": "react"
-  },
+    "jsx": "react",
+    "lib": [
+      "dom",
+      "es5",
+      "scripthost",
+      "es2015.promise"
+]
+},
   "include": [
     "./src/main/react/**/*"
   ]
