--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.11.5
 click==6.7
 cryptography==2.3
 Flask==1.0.2
+Flask-Cors==3.0.7
 Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
 idna==2.7
@@ -23,6 +24,7 @@ pylint==2.2.2
 PyMySQL==0.9.2
 python-dateutil==2.7.3
 python-editor==1.0.3
+rope==0.11.0
 six==1.12.0
 SQLAlchemy==1.2.10
 typed-ast==1.1.0
