--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^16.0.7",
     "@types/react-router": "^4.4.1",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-textarea-autosize": "^4.3.3",
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
@@ -44,6 +45,7 @@
     "react-easy-state": "^5.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-textarea-autosize": "^7.1.0",
     "styled-components": "^3.4.5"
   }
 }
