--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./dist/bundle/",
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
