--- a/docker-compose-prod/docker-compose.yaml
+++ b/docker-compose-prod/docker-compose.yaml
@@ -1,5 +1,14 @@
 version: "2"
 services:
+  nginx-uwsgi-py3:
+    build: ./nginx-uwsgi-py3
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./app/:/var/www/html/app/
+    environment:
+      TZ: "Asia/Tokyo"
   mysql:
     image: mysql:5.7
     volumes:
@@ -7,8 +16,8 @@ services:
       - ./mysql_conf:/etc/mysql/conf.d
     ports:
       - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: pass
+#    environment:
+#      MYSQL_ROOT_PASSWORD: pass
 volumes:
   mysql-data:
     driver_opts:
