nginxとuwsgiの通信でポート番号消費しないような設定へ変更

--- a/docker-compose-prod/app/uwsgi.ini
+++ b/docker-compose-prod/app/uwsgi.ini
@@ -1,7 +1,16 @@
 [uwsgi]
 master = True
-socket = localhost:8080
 wsgi-file = webapp.py
-stats = localhost:8181
-logto = uwsgi.log
 pidfile = uwsgi.pid
+
+# socket settings
+socket = /tmp/uwsgi.sock
+chmod-socket = 666
+vacuum = true
+die-on-term = true
+
+# log settings
+logto = uwsgi.log
+
+# stats server settings
+# stats = localhost:8181
