--- a/docker-compose-prod/nginx-uwsgi-py3/conf/default.conf
+++ b/docker-compose-prod/nginx-uwsgi-py3/conf/default.conf
@@ -4,7 +4,7 @@ server {
 
     location / {
         include uwsgi_params;
-        uwsgi_pass localhost:8080;
+        uwsgi_pass unix:///tmp/uwsgi.sock;
     }
 
     location = /favicon.ico {
