--- a/docker-compose-prod/docker-compose.yaml
+++ b/docker-compose-prod/docker-compose.yaml
@@ -1,15 +1,17 @@
 version: "2"
 services:
   nginx-uwsgi-py3:
+    container_name: nginx_app
     build: ./nginx-uwsgi-py3
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./app/:/var/www/html/app/
+      - ../:/var/www/html/app/
     environment:
       TZ: "Asia/Tokyo"
   mysql:
+    container_name: mysql_db
     image: mysql:5.7
     volumes:
       - mysql-data:/var/lib/mysql
