--- a/docker-compose-prod/nginx-uwsgi-py3/Dockerfile
+++ b/docker-compose-prod/nginx-uwsgi-py3/Dockerfile
@@ -13,6 +13,9 @@ RUN pip3 install pipenv
 # uwsgiインストール
 RUN pip3 install uwsgi
 
+# npm インストール
+RUN apt-get install npm -y
+
 # nginxインストール
 RUN apt-get install nginx=1.14.0-0ubuntu1.2 -y
 RUN useradd --shell /sbin/nologin -u 1000 nginx
@@ -20,6 +23,11 @@ RUN useradd --shell /sbin/nologin -u 1000 nginx
 # nginxの設定関係
 COPY conf/nginx.conf /etc/nginx/nginx.conf
 ADD conf/default.conf /etc/nginx/conf.d/default.conf
+
+# jaロケールの構築
+RUN apt-get install locales
+RUN echo "ja_JP UTF-8" >> /etc/locale.gen
+RUN locale-gen
 
 # ポートの公開
 EXPOSE 80
