どうやらuwsgiからpipenvの仮想環境が見えていないようだったので、素の周りを色々いじった
少し改善したしたようだが、まだ80で接続したときちゃんと動いていないと思う
あと、compose.yamlのnginxコンテナのポートが色々開いてるので、閉じておくこと

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,13 @@
 [uwsgi]
 master = True
 wsgi-file = main.py
+app = main
+callable = app
 pidfile = uwsgi.pid
+
+base = /var/www/html/app
+home = %(base)/.venv
+pythonpath = %(base)
 
 # socket settings
 socket = /tmp/uwsgi.sock
@@ -10,7 +16,7 @@ vacuum = true
 die-on-term = true
 
 # log settings
-logto = uwsgi.log
+logto = /var/log/uwsgi/uwsgi.log
 
 # stats server settings
-# stats = localhost:8181
+stats = localhost:8181
