--- a/docker-compose-prod/docker-compose.yaml
+++ b/docker-compose-prod/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+      - "5000:5000"
+      - "8181:8181"
     volumes:
       - ../:/var/www/html/app/
     environment:
@@ -18,6 +20,8 @@ services:
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASS: ${DB_PASS}
+    depends_on:
+      - mysql
   mysql:
     container_name: ${DB_HOST}
     image: mysql:5.7
