--- a/docker-compose-prod/docker-compose.yaml
+++ b/docker-compose-prod/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
     environment:
       TZ: "Asia/Tokyo"
       login_secret: ${login_secret}
+      SMTP_SERVER: ${SMTP_SERVER}
+      SMTP_PORT: ${SMTP_PORT}
       SMTP_LOGIN: ${SMTP_LOGIN}
       SMTP_PASS: ${SMTP_PASS}
       SMTP_FROM: ${SMTP_FROM}
