--- a/docker-compose-prod/docker-compose.yaml
+++ b/docker-compose-prod/docker-compose.yaml
@@ -2,14 +2,15 @@ version: "2"
 services:
   nginx-uwsgi-py3:
     container_name: nginx_app
-    build: ./nginx-uwsgi-py3
+    build:
+      context: ./nginx-uwsgi-py3
+      args:
+        GIT_URI: ${GIT_URI}
     ports:
       - "80:80"
       - "443:443"
       - "5000:5000"
       - "8181:8181"
-    volumes:
-      - ../:/var/www/html/app/
     environment:
       TZ: "Asia/Tokyo"
       login_secret: ${login_secret}
