とりあえずSSLで動くようになった。少し突貫気味なので見直しした方が良さそう。

--- a/docker-compose-prod/nginx-uwsgi-py3/conf/default.conf
+++ b/docker-compose-prod/nginx-uwsgi-py3/conf/default.conf
@@ -1,13 +1,40 @@
 server {
-    listen 80 default;
+    listen 80;
     server_name _;
+
+    # Let's Encryptの証明書認証ファイルチェック用ディレクトリ配下はHttpでそのまま受けるように
+    # 今のところはLet's Encryptの証明書更新をコンテナでやる予定はないが、
+    # そのうちやるかもなので用意した。
+    # (そもそもローカルで更新するときには利用する。Prodにも穴開けるのはどうかとは思うが害はないはず)
+    location ^~ /.well-known/acme-challenge/ {
+        default_type "text/plain";
+        root         /var/www/html/app/;
+    }
+
+    location / {
+        # Redirect all HTTP requests to HTTPS with a 301 Moved Permanently response.
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    server_tokens off;
+
+    listen 443;
+    server_name _;
+
+    ssl on;
+    ssl_protocols        TLSv1 TLSv1.1 TLSv1.2;
+    ssl_certificate     /etc/nginx/fullchain.pem;
+    ssl_certificate_key /etc/nginx/privkey.pem;
+
+    location = /favicon.ico {
+        empty_gif;
+    }
 
     location / {
         include uwsgi_params;
         uwsgi_pass unix:///tmp/uwsgi.sock;
     }
 
-    location = /favicon.ico {
-        empty_gif;
-    }
 }
