--- a/docker-compose-prod/nginx-uwsgi-py3/conf/nginx.conf
+++ b/docker-compose-prod/nginx-uwsgi-py3/conf/nginx.conf
@@ -6,7 +6,7 @@ pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  8;
 }
 
 
@@ -26,6 +26,8 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
+
+    server_tokens off;
 
     include /etc/nginx/conf.d/*.conf;
 }
