--- a/Pipfile
+++ b/Pipfile
@@ -36,7 +36,7 @@ Mako = "==1.0.7"
 MarkupSafe = "==1.0"
 PyJWT = "==1.7.1"
 PyMySQL = "==0.9.2"
-SQLAlchemy = "==1.2.10"
+SQLAlchemy = ">=1.3.0"
 Werkzeug = "==0.14.1"
 
 [requires]
