--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-textarea-autosize": "^4.3.3",
     "axios": "^0.19.0",
+    "hoist-non-react-statics": "^3.3.0",
     "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-dnd": "^5.0.0",
