鍵の配置後のnginxの再起動忘れ

--- a/docker-compose-prod/nginx-uwsgi-py3/Dockerfile
+++ b/docker-compose-prod/nginx-uwsgi-py3/Dockerfile
@@ -70,4 +70,4 @@ ADD conf/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 EXPOSE 443
 
-CMD /bin/bash /tmp/start.sh
+CMD /bin/bash /tmp/start.sh > /tmp/start.sh.log
