SSL鍵の永続化に向けた修正実施中！
鍵置き場を外部ボリュームへ
SSL鍵renewalのためのstandaloneからwebrootへ変更する

--- a/docker-compose-prod/docker-compose.yaml
+++ b/docker-compose-prod/docker-compose.yaml
@@ -25,6 +25,8 @@ services:
       DB_PASS: ${DB_PASS}
       SSL_DOMAIN: ${SSL_DOMAIN}
       SSL_EMAIL: ${SSL_EMAIL}
+    volumes:
+      - ssl-key:/etc/nginx/ssl_key
     depends_on:
       - mysql
   mysql:
@@ -42,4 +44,9 @@ volumes:
     driver_opts:
       type: none
       device: ${PWD}/mysql_data
+      o: bind
+  ssl-key:
+    driver_opts:
+      type: none
+      device: ${PWD}/ssl_key
       o: bind
