ssl_keyディレクトリが使われていなかったので使うように修正

--- a/docker-compose-prod/nginx-uwsgi-py3/conf/default.conf
+++ b/docker-compose-prod/nginx-uwsgi-py3/conf/default.conf
@@ -25,8 +25,8 @@ server {
 
     ssl on;
     ssl_protocols        TLSv1 TLSv1.1 TLSv1.2;
-    ssl_certificate     /etc/nginx/fullchain.pem;
-    ssl_certificate_key /etc/nginx/privkey.pem;
+    ssl_certificate     /etc/nginx/ssl_key/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl_key/privkey.pem;
 
     location = /favicon.ico {
         empty_gif;
