--- a/docker-compose-prod/nginx-uwsgi-py3/Dockerfile
+++ b/docker-compose-prod/nginx-uwsgi-py3/Dockerfile
@@ -73,4 +73,4 @@ ADD conf/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 EXPOSE 443
 
-CMD /bin/bash -x /tmp/start.sh > /tmp/start.sh.log
+CMD /bin/bash -x /tmp/start.sh >& /tmp/start.sh.log
